# ProductionEmailAssistant

./: .editorconfig  .gitignore  README.md  eval_runner.py  pyproject.toml
app/: config.py  dependencies.py  main.py
app/agents/: critic.py  email_agent.py  prompts.py
app/core/: embeddings.py  exceptions.py  llm_client.py  logging.py  text.py
app/data/: scenarios.json
app/metrics/: evaluator.py  judge.py  reference.py  rule_based.py
app/models/: domain.py
app/routers/: email_send.py  evals.py  evaluate.py  generate.py  system.py  ui.py
app/schemas/: api.py
app/services/: email_send_service.py  eval_service.py  evaluation_service.py  generation_service.py
docs/: 1. PROCESS.md  2. ASDL.md  3. ARCHITECTURE.md  4. IMPLEMENTATION.md  5. CHANGES.md  6. EDGE_CASES.md
reports/: final_evaluation_report.md  metrics_report_gemini.csv  metrics_report_openrouter.csv  model_comparison.md
scripts/: _app_check.py  _diag_gen.py  _eval_check.py  _gen_check.py  _gen_ref_check.py  _judge_check.py  _ui_check.py  m1_chat_smoke.py  m1_embedder_smoke.py  metrics_report.py
static/: index.html
tests/integration/: test_safety.py
tests/unit/: test_critic.py  test_email_agent.py  test_evaluator.py  test_reference.py  test_resilience.py  test_rule_based.py
