[project]
name = "production_email_assistant"
version = "0.1.0"
description = "Agentic email generation assistant with self refinement and hybrid evaluation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy==2.4.6",
    "onnxruntime==1.27.0",
    "openai==2.43.0",
    "pydantic-settings==2.14.1",
    "python-dotenv>=1.2.2",
    "structlog==26.1.0",
    "tenacity==9.1.4",
    "transformers==5.12.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
