[project]
name = "production_email_assistant"
version = "0.1.0"
description = "Agentic email generation assistant with self refinement and hybrid evaluation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosmtplib==3.0.0",
    "asyncio-extras>=1.3.2",
    "fastapi==0.137.2",
    "nltk==3.9.4",
    "numpy==2.4.6",
    "onnxruntime==1.27.0",
    "openai==2.43.0",
    "pydantic-settings==2.14.1",
    "python-dotenv>=1.2.2",
    "rouge-score==0.1.2",
    "structlog==26.1.0",
    "tenacity==9.1.4",
    "textstat==0.7.13",
    "transformers==5.12.1",
    "uvicorn==0.49.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest==9.1.0",
]
